// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/InlineButton Defaults play-test 1`] = `
<div data-test-block="true">
  <button class="InlineButton_button__2aGtg   "
          type="button"
  >
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithAccesskey play-test 1`] = `
<div data-test-block="true">
  <button class="InlineButton_button__2aGtg   "
          accesskey="j"
          type="button"
  >
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <button class="InlineButton_button__2aGtg   "
          type="button"
          aria-describedby="testid1234"
  >
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithAttributes play-test 1`] = `
<div data-test-block="true">
  <button id="htmlId"
          class="InlineButton_button__2aGtg   dummyClassname"
          lang="nb"
          data-testid="123ID"
          form="formid123"
          type="button"
  >
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithCustomIcon smoke-test 1`] = `
<div data-test-block="true">
  <button class="InlineButton_button__2aGtg InlineButton_button_withIconLeft__wsxa+  "
          type="button"
  >
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2Z">
      </path>
    </svg>
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithDisabled play-test 1`] = `
<div data-test-block="true">
  <button class="InlineButton_button__2aGtg   "
          disabled
          type="button"
  >
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithDisabledAndIcon smoke-test 1`] = `
<div data-test-block="true">
  <button class="InlineButton_button__2aGtg InlineButton_button_withIconLeft__wsxa+  "
          disabled
          type="button"
  >
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
      </path>
    </svg>
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <button class="InlineButton_button__2aGtg   "
          type="button"
  >
    <span class>
      Knapp har blitt klikket på
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithIcon play-test 1`] = `
<div data-test-block="true">
  <button class="InlineButton_button__2aGtg InlineButton_button_withIconLeft__wsxa+  "
          type="button"
  >
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
      </path>
    </svg>
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithIconRight smoke-test 1`] = `
<div data-test-block="true">
  <button class="InlineButton_button__2aGtg  InlineButton_button_withIconRight__FUld4 "
          type="button"
  >
    <span class>
      Legg til rapport
    </span>
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/InlineButton WithLongText smoke-test 1`] = `
<div data-test-block="true">
  <button class="InlineButton_button__2aGtg   "
          type="button"
  >
    <span class>
      Denne knappen har en veldig lang tekst. Så lang at den lange teksten tvinger fram linjeskift hvor tekst er venstrejustert. Denne knappen har en veldig lang tekst. Så lang at den lange teksten tvinger fram linjeskift hvor tekst er venstrejustert.
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithLongTextAndIcon smoke-test 1`] = `
<div data-test-block="true">
  <button class="InlineButton_button__2aGtg  InlineButton_button_withIconRight__FUld4 "
          type="button"
  >
    <span class>
      Denne knappen har en veldig lang tekst med ikon på høyre side. Så lang at den lange teksten tvinger fram linjeskift hvor tekst er høyrejustert. Denne knappen har en veldig lang tekst med ikon på høyre side. Så lang at den lange teksten tvinger fram linjeskift hvor tekst er høyrejustert.
    </span>
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/InlineButton WithRef play-test 1`] = `
<div data-test-block="true">
  <button class="InlineButton_button__2aGtg   "
          type="button"
          id="dummyIdForwardedFromRef"
  >
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithSpinner smoke-test 1`] = `
<div data-test-block="true">
  <div class="flex bottomSpacingXL">
    <button class="InlineButton_button__2aGtg   marginRightM"
            type="button"
    >
      <span class>
        Legg til rapport
      </span>
    </button>
    <button class="InlineButton_button__2aGtg InlineButton_button_withIconLeft__wsxa+  marginRightM"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
        </path>
      </svg>
      <span class>
        Legg til rapport
      </span>
    </button>
    <button class="InlineButton_button__2aGtg  InlineButton_button_withIconRight__FUld4 "
            type="button"
    >
      <span class>
        Legg til rapport
      </span>
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
        </path>
      </svg>
    </button>
  </div>
  <div class="flex">
    <button class="InlineButton_button__2aGtg   marginRightM"
            type="button"
    >
      <span class="InlineButton_hide__u3ooR">
        Legg til rapport
      </span>
      <div aria-live="polite"
           aria-atomic="true"
           class="Spinner_spinner__RJ9Al Spinner_spinner_blue__khcHU Spinner_spinner_flexColumn__3SCpy Spinner_spinner_small__2mxjt InlineButton_spinner__GesB1 "
      >
        <div class="Spinner_spinnerAnimation__nAt8p ">
        </div>
        <span class="Spinner_spinnerTitle__4A7b4 Spinner_srOnly__eRxJZ Spinner_spinnerTitle_centerText__ud193 ">
          Laster inn
        </span>
      </div>
    </button>
    <button class="InlineButton_button__2aGtg InlineButton_button_withIconLeft__wsxa+  marginRightM"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU InlineButton_hide__u3ooR"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
        </path>
      </svg>
      <span class="InlineButton_hide__u3ooR">
        Legg til rapport
      </span>
      <div aria-live="polite"
           aria-atomic="true"
           class="Spinner_spinner__RJ9Al Spinner_spinner_blue__khcHU Spinner_spinner_flexColumn__3SCpy Spinner_spinner_small__2mxjt InlineButton_spinner__GesB1 "
      >
        <div class="Spinner_spinnerAnimation__nAt8p ">
        </div>
        <span class="Spinner_spinnerTitle__4A7b4 Spinner_srOnly__eRxJZ Spinner_spinnerTitle_centerText__ud193 ">
          Laster inn
        </span>
      </div>
    </button>
    <button class="InlineButton_button__2aGtg  InlineButton_button_withIconRight__FUld4 "
            type="button"
    >
      <span class="InlineButton_hide__u3ooR">
        Legg til rapport
      </span>
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU InlineButton_hide__u3ooR"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
        </path>
      </svg>
      <div aria-live="polite"
           aria-atomic="true"
           class="Spinner_spinner__RJ9Al Spinner_spinner_blue__khcHU Spinner_spinner_flexColumn__3SCpy Spinner_spinner_small__2mxjt InlineButton_spinner__GesB1 "
      >
        <div class="Spinner_spinnerAnimation__nAt8p ">
        </div>
        <span class="Spinner_spinnerTitle__4A7b4 Spinner_srOnly__eRxJZ Spinner_spinnerTitle_centerText__ud193 ">
          Laster inn
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Tester/InlineButton WithType play-test 1`] = `
<div data-test-block="true">
  <button class="InlineButton_button__2aGtg   "
          type="submit"
  >
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;
